fixtures/frontend/milestone-2/invalid/trailing-declaration-body-token/main.aivi
fun prependCells:List Int #head:Int #tail:List Int =>
    head :: tail
